copy fixes and spacing

--- a/src/styles/2-modules/_layouts.scss
+++ b/src/styles/2-modules/_layouts.scss
@@ -35,7 +35,7 @@ $secondary-purp: #7D246B;
   width: 100%;
   align-items: start;
   width: 100%;
-  margin: 3rem 0;
+  margin: 5rem 0;
   figure {
     position: relative;
     width: 100%;
