--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -106,7 +106,7 @@
   width: 100%;
   align-items: start;
   width: 100%;
-  margin: 3rem 0;
+  margin: 5rem 0;
 }
 .photo-section-8 figure, .photo-section-7 figure, .photo-section-6 figure, .photo-section-5 figure, .photo-section-4 figure, .photo-section-3 figure, .photo-section-2 figure, .photo-section-1 figure {
   position: relative;
